welcome screen layout bugfixes desktop pane scrolling spot-nav prototype

--- a/src/css/base.desktop.css
+++ b/src/css/base.desktop.css
@@ -1,18 +1,27 @@
-html, body {
-    min-height: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    position: relative;
-    font-family: 'Open Sans', sans-serif;
-    overflow: hidden;
-}
-
 body {
     /* background: url('../img/bg.jpg') center bottom/cover; */
 }
 
+.panes {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.pane-content {
+    position: absolute;
+    top: 50px;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow-y: scroll;
+}
+
 .navbar {
+    z-index: 10;
     border-radius: 0;
     margin-bottom: 0;
 }
@@ -24,4 +33,22 @@ body {
 
 .navbar-brand img {
     height: 24px;
+}
+
+#spot-nav {
+    position: fixed;
+    top: 150px;
+    left: 50px;
+    width: 25%;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 20;
+}
+
+.spot-nav-map {
+    width: 100%;
+    margin-bottom: 14px;
+}
+
+.spot-accident-icon {
+    width: 50px;
 }
