--- a/src/css/intro.css
+++ b/src/css/intro.css
@@ -5,6 +5,7 @@
 
 .row-intro-bg {
     height: 50%;
+    margin: 0;
 }
 
 .row-intro-bg div {
